more sonarqube fixes